# Mood-Mirror

./: .gitignore  CIFAR_ResNet18_V1.csv  README.md  app.py  convert_to_onnx.py  logging.csv  main.py  model.py  pyproject.toml  run.py  username.txt  validation_accuracy.csv
FER-2013 Training/: V1_log.csv  V1_validation_accuracy.csv  V1analysis.md  V2_fer2013_val_acc.csv  V3_validation_accuracy.csv  V3training.py  V4_validation_accuracy(In Us).csv  V4_validation_accuracy.csv  download.py  graph.py  trainingV1.py  trainingV2.py  trainingV3.py  trainingV4.py  validation_accuracy.csv
core/: inference.py  notifications.py
src/moodmirror/: __init__.py  convert_to_onnx.py  main.py
src/moodmirror/core/: __init__.py  inference.py  notifications.py
src/moodmirror/ui/: Dashboard.qml  WelcomePage.qml
templates/: index.html
ui/: MainWindow.qml  WelcomePage.qml
